--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
   <h1>Adress Book</h1>
+  
+  <div name="address_form">
+   
+    <form onsubmit="return handleForm(this)">
+      <label for="name">Name: </label><input type="text" name="name" />
+      <label for="phone">Phone: </label><input type="text" name="phone" />
+      <label for="twitter">Twitter: </label><input type="text" name="twitter" />
+      <input type="submit" value="Save" name="submit"/>
+    </form>
+  
+  </div>
+  
+  <div id="response_message"></div>
+  <div name="address_list"><ul></ul></div>
   <script src="./js/AddressBook.js"></script>
+  <script src="./js/app.js"></script>
+
 </body>
 </html>
